--- a/PHYS137A/Lectures/lecture3.tex
+++ b/PHYS137A/Lectures/lecture3.tex
@@ -59,7 +59,7 @@ Think about your favorite particle. It looks something like this:
 
 \includegraphics[width=400px]{basic_wave.jpeg}
 
-Unfortunately this basic wave spills everywhere in space. This is how our physics translates: 
+Unfortunately this basic wave spills everywhere in space. It is a good approximation for certain scales (say the double-slit setting), but not perfect. This is how our physics translates: 
 \begin{align*}
     E &= hf = \hbar \omega \\
     p &= \frac{h}{\lambda} = \hbar k
