--- a/EECS106A/lectures.tex
+++ b/EECS106A/lectures.tex
@@ -4,4 +4,6 @@
 \begin{document}
     \include{title.tex}
     \include{./Lectures/lecture1.tex}
+    \include{./Lectures/lecture2.tex}
+    \include{./Lectures/lecture3.tex}
 \end{document}
