--- a/PHYS137A/Lectures/lecture5.tex
+++ b/PHYS137A/Lectures/lecture5.tex
@@ -52,7 +52,11 @@ $\Delta x = \frac{\hbar}{\Delta p_x}$. It turns out this is the best you can do.
 \begin{theorem}[Heisenberg Uncertainty Principle]
     The Gaussian wave packet is the minimum uncertainty state. That is,
     \[ \Delta p_x \Delta x \geq \hbar \]
+    for any wave packet.
 \end{theorem}
+
+Furthermore, there is an interplay between frequency and time. Since $E = \hbar \omega$:
+\[ \Delta E \delta t \geq \hbar \]
 
 There is a very nice physical interpretation of this principle. If you measure $x$ to an accuracy $\Delta x = a$, then
 immediately measuring $p$ would give you an uncertainty at least $\Delta p \geq \frac{\hbar}{\Delta x}$.
