--- a/EECS106A/Lectures/lecture3.tex
+++ b/EECS106A/Lectures/lecture3.tex
@@ -140,5 +140,5 @@ One way is to define roll pitch and yaw angles $(\varphi, \theta, \psi)$ about t
 We can also rotate frames; generally we use $ZYX$ euler angles, where we rotate about $z$, then $y'$, then $x''$.
 We use $\alpha, \beta, \gamma$ for these, but now the axes themselves you're rotating about themselves are changing!
 \[ R_{ab} = R_z(\alpha) R_{y'}(\beta) R_{x''}(\gamma) \]
-The problem is with Euler angles is there are some combinations of angles that create singularities (a 0 rotation matrix).
+The problem is with Euler angles is there are some combinations of angles that create you cannot move it to anywhere you want.
 
