--- a/PHYS137A/lectures.tex
+++ b/PHYS137A/lectures.tex
@@ -9,4 +9,5 @@
     \include{./Lectures/lecture4.tex}
     \include{./Lectures/lecture5.tex}
     \include{./Lectures/lecture6.tex}
+    \include{./Lectures/lecture7.tex}
 \end{document}
