--- a/PHYS137A/Lectures/lecture7.tex
+++ b/PHYS137A/Lectures/lecture7.tex
@@ -45,7 +45,7 @@ Clearly the commutator is 0 if and only if the two operators commute. This means
     [\hat{x}, \hat{p}_x] &= \hat{x} \hat{p}_x - \hat{p}_x \hat{x} \\
     [\hat{x}, \hat{p}_x] \Psi &= \hat{x} \hat{p}_x \Psi - \hat{p}_x \hat{x} \Psi \\
     &= - i \hbar x \partialderivative{}{x} \Psi + i \hbar \partialderivative{}{x} (x \Psi) \\
-    &= - i \hbar x \partialderivative{}{x} \Psi + i \hbar (\Psi + x \partialderivative{\Psi}{x} \\
+    &= - i \hbar x \partialderivative{}{x} \Psi + i \hbar \qty(\Psi + x \partialderivative{\Psi}{x}) \\
     &= i \hbar \Psi
 \end{align*}
 So the commutator is $i \hbar I \neq 0$. In fact, in general, the commutator of a canonical Fourier pair will always be this.
