--- a/PHYS137A/lectures.tex
+++ b/PHYS137A/lectures.tex
@@ -10,4 +10,6 @@
     \include{./Lectures/lecture5.tex}
     \include{./Lectures/lecture6.tex}
     \include{./Lectures/lecture7.tex}
+    \include{./Lectures/lecture8.tex}
+    \include{./Lectures/lecture9.tex}
 \end{document}
