--- a/CS294-226/Lectures/lecture4.tex
+++ b/CS294-226/Lectures/lecture4.tex
@@ -115,7 +115,7 @@ There is now a natural encoding:
 \[ f(X) = f_0 + f_1 X + \dots + f_{k - 1} X^{k - 1} \]
 Where we can associate:
 \[ (f_0, f_1, \dots, f_{k - 1}) \mapsto (f(a_1), f(a_2), \dots, f(a_n)) \]
-Now that we're in abstract algebra land:
+Note the important following fact.
 \begin{theorem}[Interpolation]
     For some field $\F$, all $a_1, \dots, a_k \in \F$ and distinct $b_1, \dots, b_k \in \F_q$,
     there is a unique polynomial $f(X) \in \F_q[X]$
@@ -123,13 +123,13 @@ Now that we're in abstract algebra land:
 \end{theorem}
 This means a lot for our code. What is the distance of the code? We consider some erasures.
 \[ (f(a_1), f(a_2), \dots, f(a_n)) \to (f(a_1), ?, ?, f(a_4), \dots, f(a_{n - 2}), ?, f(a_n)) \]
-We only need $k$ points to survive to recover the original polynomial. So $s = n - k $ erasures correctable.
+We only need $k$ points to survive to recover the original polynomial. So $s = n - k $ erasures are correctable.
 Thus, the distance is $d \geq n - k + 1$,
 which is exactly the Singleton bound, so $d = n - k + 1$ exactly!
-The generator matrix is just the Vandermonde matrix:
+The generator matrix of this $[n, k, n - k + 1]_{\F}$ code is just the Vandermonde matrix:
 \[ \begin{bmatrix}
-    1 & a_1 & a_1^2 \dots & a_1^{k - 1} \\
-    1 & a_2 & a_2^2 \dots & a_2^{k - 1} \\
+    1 & a_1 & a_1^2 & \dots & a_1^{k - 1} \\
+    1 & a_2 & a_2^2 & \dots & a_2^{k - 1} \\
     \vdots & \vdots & \vdots & \ddots & \vdots \\
-    1 & a_n & a_n^2 \dots & a_n^{k - 1} \\
+    1 & a_n & a_n^2 & \dots & a_n^{k - 1} \\
 \end{bmatrix} \]
