--- a/PHYS137A/Lectures/lecture9.tex
+++ b/PHYS137A/Lectures/lecture9.tex
@@ -2,7 +2,7 @@
 
 Consider the following potential:
 
-% img
+\includegraphics[width=400px]{wigglypot.jpeg}
 
 Let us try solving the Schrodinger equation:
 \[ \qty[-\frac{\hbar^2}{2m} \derivative{}{x} + V(x)] \Psi_E(x) = E \Psi_E(x) \]
@@ -15,17 +15,17 @@ We will work through the marked cases on the diagram.
     Since $V(x) - E > 0$, this means that $\derivative{^2\Psi}{x^2}$ and $\Psi$ have the same sign. But look at some candidate solutions. These
     all diverge, which would contradict normalization!
     
-    % img
+    \includegraphics[width=250px]{divded.jpeg}
 
     No solutions for $E < V_min$, which makes sense--you can't allow states lower than the lowest energy.
     \item We detail some possibilities considering curvature:
     
-    % img
+    \includegraphics[width=400px]{curvoposs.jpeg}
 
     However, $\Psi$ and $\derivative{\Psi}{x}$ must be continuous by a probabilistic interpretation of $|\Psi|^2$. Thus a stitched solution must
     be like 
 
-    % img
+    \includegraphics[width=400px]{stitching gaming.jpeg}
 
     Notice that at the ends there is an exponential decay! So there is a small (but vanishing) probability that
     we have the wavefunction at a lower energy than the potential!
@@ -34,7 +34,7 @@ We will work through the marked cases on the diagram.
 
     \item With similar reasoning, this case looks like:
     
-    % img
+    \includegraphics[width=400px]{onecurvetorulethemall.jpeg}
 
     However, since you only have one boundary condition for a second-order equation, there is no energy quantization! Any energy in between can be allowed.
 
