--- a/CS294-226/lectures.tex
+++ b/CS294-226/lectures.tex
@@ -8,4 +8,5 @@
     \include{./Lectures/lecture3.tex}
     \include{./Lectures/lecture4.tex}
     \include{./Lectures/lecture5.tex}
+    \include{./Lectures/lecture6.tex}
 \end{document}
