--- a/PHYS137A/Lectures/lecture10.tex
+++ b/PHYS137A/Lectures/lecture10.tex
@@ -50,6 +50,7 @@ There is a little bit of probability on the right side, but we don't consider ev
 \end{cases} \]
 The probability density to the left of the barrier is oscillatory, despite it being a plane wave. This is because there is self-interference between the wave and its reflected version!
 
+\subsection{Uncertain in the Barrier}
 Now we ask, can we observe the particle in the region $x > 0$? For this potential, the decay length is $\frac{1}{\kappa}$.
 This observation means we've made a measurement of $\Delta x \sim \frac{1}{\kappa}$. By Heisenberg, this induces an uncertainty in the momentum!
 \[ \Delta P_x \geq \frac{\hbar}{\Delta x} \sim \qty[2m(V_0 - E)]^{1/2} \]
@@ -69,5 +70,5 @@ Solving the boundary conditions gets you:
 and we have:
 \[ \mathfrak{R} = \frac{\qty[1 - (1 - \frac{V_0}{E})^{1/2}]^2}{\qty[1 - (1 + \frac{V_0}{E})^{1/2}]^2} \]
 So the transmittivity is:
-\[ \mathfrak{T} = \frac{v' |C|^2}{v |A|^2} = \frac{4kk'}{(k + k')^2} \]
+\[ \tau = \frac{v' |C|^2}{v |A|^2} = \frac{4kk'}{(k + k')^2} \]
 Note QM always has partial reflection.
