--- a/PHYS137A/lectures.tex
+++ b/PHYS137A/lectures.tex
@@ -13,4 +13,5 @@
     \include{./Lectures/lecture8.tex}
     \include{./Lectures/lecture9.tex}
     \include{./Lectures/lecture10.tex}
+    \include{./Lectures/lecture11.tex}
 \end{document}
