--- a/PHYS137A/lectures.tex
+++ b/PHYS137A/lectures.tex
@@ -14,4 +14,6 @@
     \include{./Lectures/lecture9.tex}
     \include{./Lectures/lecture10.tex}
     \include{./Lectures/lecture11.tex}
+    \include{./Lectures/lecture12.tex}
+    \include{./Lectures/lecture13.tex}
 \end{document}
