--- a/PHYS137A/Lectures/lecture3.tex
+++ b/PHYS137A/Lectures/lecture3.tex
@@ -69,7 +69,7 @@ where $\hbar = \frac{h}{2\pi}$ and $k = \frac{2\pi}{\lambda}$.
 Consider a 1-D particle with some $x$ direction momentum $p_x$.
 \begin{align*}
     \Psi &= A e^{i(k x - \omega(k) t)} \\
-    \Psi &= Ae^{i(p_x x - E(p_x) t)} \\
+    \Psi &= Ae^{i(p_x x - E(p_x) t)/\hbar} \\
 \end{align*}
 Thus simply by derivative rules, the "momentum operator" $p_x$ is:
 \[ - i \hbar \partialderivative{}{x} \Psi = p_x \Psi \]
