--- a/PHYS137A/lectures.tex
+++ b/PHYS137A/lectures.tex
@@ -16,4 +16,6 @@
     \include{./Lectures/lecture11.tex}
     \include{./Lectures/lecture12.tex}
     \include{./Lectures/lecture13.tex}
+    \include{./Lectures/lecture14.tex}
+    \include{./Lectures/lecture15.tex}
 \end{document}
