--- a/PHYS137A/lectures.tex
+++ b/PHYS137A/lectures.tex
@@ -18,4 +18,7 @@
     \include{./Lectures/lecture13.tex}
     \include{./Lectures/lecture14.tex}
     \include{./Lectures/lecture15.tex}
+    \include{./Lectures/lecture16.tex}
+    \include{./Lectures/lecture17.tex}
+    \include{./Lectures/lecture18.tex}
 \end{document}
