amazing notes much wow

--- a/PHYS137A/Lectures/lecture15.tex
+++ b/PHYS137A/Lectures/lecture15.tex
@@ -37,7 +37,7 @@ And similarly,
 \[ \hat{a}_{-} \ket*{E_n} = \sqrt{n} \ket*{E_{n - 1}} \]
 
 Chaining together reveals:
-\[ \ket*{E_n} = \frac{1}{n!} \hat{a}_{+}^n \ket*{E_0} \]
+\[ \ket*{E_n} = \frac{1}{\sqrt{n!}} \hat{a}_{+}^n \ket*{E_0} \]
 
 Let's write $\hat{x}$ and $\hat{p}$ as:
 \[ \hat{x} = \qty(\frac{\hbar}{2 m \omega})^{1/2} (\hat{a}_{+} + \hat{a}_{-}) \]
