--- a/PHYS137A/Lectures/lecture18.tex
+++ b/PHYS137A/Lectures/lecture18.tex
@@ -82,7 +82,7 @@ We have now the following facts about Unitary transforms, which correspond well 
 
     Now take some operator:
     \begin{align*}
-        \hat{A'} &= \hat{A} + \delta\hat{A}
+        \hat{A'} &= \hat{A} + \delta\hat{A} \\
         &= \hat{U} \hat{A} \hat{U}^{\dagger} \\
         &= \hat{A} + i \epsilon \hat{F}\hat{A} - i \epsilon \hat{A}\hat{F} + O(\epsilon^2) \\
     \end{align*}
