--- a/PHYS137A/Lectures/lecture1.tex
+++ b/PHYS137A/Lectures/lecture1.tex
@@ -47,7 +47,7 @@ Suppose our blackbody is a cube of length $L$.
 \end{center}
 Let's find the waves that are stable in the cube.
 First, we write the wave equation.
-\[ \nabla^2 \Psi(\mbf{r}, t) = \frac{1}{c^2} \partialderivative{}{t^2} \Psi(\mbf{r}, t) \]
+\[ \nabla^2 \Psi(\mbf{r}, t) = \frac{1}{c^2} \partialderivative{^2}{t^2} \Psi(\mbf{r}, t) \]
 where
 \[ \nabla^2 = \partialderivative{^2}{x^2} + \partialderivative{^2}{y^2} + \partialderivative{^2}{z^2} \]
 
