--- a/PHYS137A/Lectures/lecture2.tex
+++ b/PHYS137A/Lectures/lecture2.tex
@@ -74,7 +74,7 @@ where the fraction term is the Boltzmann factor normalized to a probability. Can
 \end{align*}
 Then, our energy is:
 \begin{align*}
-    \frac{g(f) \dd{f}}{V} \bar{E} &= \frac{8 \pi h f^3}{c^3} \frac{1}{\frac{hf}{k_B T}) - 1} \dd{f}
+    \frac{g(f) \dd{f}}{V} \bar{E} &= \frac{8 \pi h f^3}{c^3} \frac{1}{\exp(\frac{hf}{k_B T}) - 1} \dd{f}
 \end{align*}
 By converting from $f$ to $\lambda$, the correct formula is:
 \[ \rho(\lambda, T) = \frac{8 \pi hc}{\lambda^5} \frac{1}{e^{\frac{hc}{\lambda k_B T}} - 1} \]
