--- a/PHYS137A/Lectures/lecture20.tex
+++ b/PHYS137A/Lectures/lecture20.tex
@@ -1,4 +1,4 @@
-\section{Lecture 20: Angular Momentum, Continued}
+\section{Lecture 20: Angular Momentum, Part 2}
 
 Is is obvious that:
 \[ [hat{x}_i, \hat{p}_j] = i \hbar \delta_{ij}, [hat{x}_i, \hat{x}_j] = [hat{p}_i, \hat{p}_j] = 0 \]
