--- a/PHYS137A/Lectures/lecture22.tex
+++ b/PHYS137A/Lectures/lecture22.tex
@@ -88,7 +88,7 @@ Consider a particle of mass $\mu$. The kinetic energy is:
     \hat{T} = \frac{\hat{p}^2}{2 \mu} \\
     &= -\frac{\hbar^2}{2\mu} \nabla^2 \\
     &= -\frac{\hbar^2}{2\mu} \qty(\frac{1}{r^2} \pdv{}{r} \qty(r^2 \pdv{}{r}) + \frac{1}{r^2 \sin \theta} \pdv{}{\theta} \qty(\sin \theta \pdv{}{\theta}) + \frac{1}{r^2 \sin^2 \theta} \pdv{}{\varphi^2}) \\
-    &= -\frac{\hbar^2}{2\mu} \qty(\frac{1}{r^2} \pdv{}{r} \qty(r^2 \pdv{}{r}) - \frac{\hat{L}^2}{\hbar^2 r^2}) \
+    &= -\frac{\hbar^2}{2\mu} \qty(\frac{1}{r^2} \pdv{}{r} \qty(r^2 \pdv{}{r}) - \frac{\hat{L}^2}{\hbar^2 r^2})
 \end{align*}
 If we constrain the particle to live on sphere of $r = a$:
 \begin{align*}
@@ -102,6 +102,6 @@ where $I$ is the moment of inertia. Thus:
 
 The simplest problem is that of the rigid rotor, when $\hat{V} = 0$.
 \begin{align*}
-    \hat{H} &= \frac{\hat{L}^2}{2I} \implies E_{\ell} &= \frac{\hbar^2}{2\pi} \ell (\ell + 1)
+    \hat{H} &= \frac{\hat{L}^2}{2I} \implies E_{\ell} = \frac{\hbar^2}{2\pi} \ell (\ell + 1)
 \end{align*}
 This immediately gives you the rotation energy of diatomic molecules.
