--- a/PHYS137A/lectures.tex
+++ b/PHYS137A/lectures.tex
@@ -26,4 +26,5 @@
     \include{./Lectures/lecture21.tex}
     \include{./Lectures/lecture22.tex}
     \include{./Lectures/lecture23.tex}
+    \include{./Lectures/lecture24.tex}
 \end{document}
