--- a/PHYS137A/lectures.tex
+++ b/PHYS137A/lectures.tex
@@ -27,4 +27,5 @@
     \include{./Lectures/lecture22.tex}
     \include{./Lectures/lecture23.tex}
     \include{./Lectures/lecture24.tex}
+    \include{./Lectures/lecture25.tex}
 \end{document}
