--- a/PHYS137A/lectures.tex
+++ b/PHYS137A/lectures.tex
@@ -28,4 +28,5 @@
     \include{./Lectures/lecture23.tex}
     \include{./Lectures/lecture24.tex}
     \include{./Lectures/lecture25.tex}
+    \include{./Lectures/lecture26.tex}
 \end{document}
