--- a/PHYS137A/Lectures/lecture20.tex
+++ b/PHYS137A/Lectures/lecture20.tex
@@ -42,7 +42,7 @@ Call an eigenfunction of the $\hat{L}_z$ operator: $\Phi_m(\varphi)$ with eigenv
 This yields a differential equation:
 \begin{align*}
     -i \pdv{}{\varphi} \Phi_m(\varphi) &= m \Phi_m(\varphi) \\
-    \Phi_m(\varphi) &= \frac{1}{\sqrt{2\pi}}
+    \Phi_m(\varphi) &= e^{im\varphi}
 \end{align*}
 
 A clear boundary condition is:
