--- a/PHYS137A/Lectures/lecture23.tex
+++ b/PHYS137A/Lectures/lecture23.tex
@@ -52,8 +52,8 @@ Note that such a matrix is a 4-dimensional tensor, so we can't draw it out very 
     [\hat{J}_z]_{j'm'jm} &= \mel**{j'm'}{\hat{J}_z}{jm} \\
     &= m\hbar \delta_{j j'} \delta_{mm'} \\
     [\hat{J}_{\pm}]_{j'm'jm} &= \mel**{j'm'}{\hat{J}_{\pm}}{jm} \\
-    &= \sqrt{j(j + 1) - m (m \pm 1)}^{1/2} \bra{j'm'}\ket{j, m \pm 1} \\
-    &= \sqrt{j(j + 1) - m (m \pm 1)}^{1/2} \delta{j j'} \delta_{m \pm 1, m'} \\
+    &= \sqrt{j(j + 1) - m (m \pm 1)} \bra{j'm'}\ket{j, m \pm 1} \\
+    &= \sqrt{j(j + 1) - m (m \pm 1)} \delta_{j j'} \delta_{m \pm 1, m'} \\
 \end{align*}
 We can find the matrix for $\hat{J}_x$ using $\frac{1}{2}(\hat{J}_{+} + \hat{J}_{-})$.
 
