--- a/PHYS137A/lectures.tex
+++ b/PHYS137A/lectures.tex
@@ -29,4 +29,6 @@
     \include{./Lectures/lecture24.tex}
     \include{./Lectures/lecture25.tex}
     \include{./Lectures/lecture26.tex}
+    \include{./Lectures/lecture27.tex}
+    \include{./Lectures/lecture28.tex}
 \end{document}
