--- a/PHYS137A/lectures.tex
+++ b/PHYS137A/lectures.tex
@@ -31,4 +31,5 @@
     \include{./Lectures/lecture26.tex}
     \include{./Lectures/lecture27.tex}
     \include{./Lectures/lecture28.tex}
+    \include{./Lectures/lecture29.tex}
 \end{document}
