--- a/PHYS137A/lectures.tex
+++ b/PHYS137A/lectures.tex
@@ -32,4 +32,5 @@
     \include{./Lectures/lecture27.tex}
     \include{./Lectures/lecture28.tex}
     \include{./Lectures/lecture29.tex}
+    \include{./Lectures/lecture30.tex}
 \end{document}
